--- a/Cucumber_project/pom.xml
+++ b/Cucumber_project/pom.xml
@@ -5,6 +5,11 @@
   <version>0.0.1-SNAPSHOT</version>
   
   
+  <properties>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
+</properties>
+
   <dependencies>
   <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 <dependency>
@@ -37,6 +42,21 @@
 </dependency>
 		
     </dependencies>
+    
+    
+    <build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+			</plugins>
+			</build>
     
   
 </project>
