--- a/Cucumber_project/pom.xml
+++ b/Cucumber_project/pom.xml
@@ -17,7 +17,13 @@
     <artifactId>selenium-java</artifactId>
     <version>3.141.59</version>
 </dependency>
-  
+ 
+ <dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>7.1.0</version>
+			<scope>compile</scope>
+		</dependency> 
 
 
  <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
