--- a/Cucumber_project/pom.xml
+++ b/Cucumber_project/pom.xml
@@ -4,7 +4,7 @@
   <artifactId>SampeTestNg</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
-  
+
   <properties>
     <maven.compiler.source>1.6</maven.compiler.source>
     <maven.compiler.target>1.6</maven.compiler.target>
@@ -39,15 +39,33 @@
 			<version>4.0.0</version>
 		</dependency>
 		
-	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
+	
+  <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-java</artifactId>
+    <version>6.10.4</version>
+</dependency>
+  
+  <!-- https://mvnrepository.com/artifact/junit/junit -->
+<dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.13.1</version>
+    <scope>test</scope>
+</dependency>
+  <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
 <dependency>
     <groupId>io.cucumber</groupId>
     <artifactId>cucumber-junit</artifactId>
-    <version>5.7.0</version>
+    <version>6.11.0</version>
     <scope>test</scope>
 </dependency>
-		
-    </dependencies>
+  
+  
+  
+  </dependencies>
+  
     
     
     <build>
@@ -64,26 +82,11 @@
 			
 			
 			
-				<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M4</version>
-				<configuration>
-					<suiteXmlFiles>
-						<suiteXmlFile>testng.xml</suiteXmlFile>
-					</suiteXmlFiles>
-					
-				</configuration>
-			</plugin>
+				
 			
 			
 			</plugins>
-			
-			
-			
-			
-			
-			
+
 			</build>
     
   
